Fix double scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 html,
 body {
   width: 100%;
-  height: 100%;
   overflow-x: hidden;
   background-color: var(--primary-bg);
   
@@ -34,7 +33,6 @@ code {
 
 #root {
   width: 100%;
-  height: 100%;
   --primary-bg: #f8f8f8;
   --secondary-bg: #9BBB63;
   --primary-text-color: #545190;
